fix(style): correcting z-index

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -41,6 +41,7 @@ body {
   margin-bottom: 1rem;
   top: 0;
   width: 100%;
+  z-index: 10;
 }
 
 main {
