--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -2,7 +2,7 @@
   position: fixed;
   inset: 0;
   background-color: #000c;
-  z-index: 5;
+  z-index: 20;
   display: none;
   place-items: center;
 }
